# kinetic

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  Kinetic-PRD.md  README.md  ROADMAP.md  credentials.toml.example  pyproject.toml  render.yaml
.claude/: settings.json
.claude/commands/: architect.md  backend-dev.md  docs-keeper.md  frontend-dev.md  qa-reviewer.md  security-reviewer.md
.githooks/: post-merge  post-rewrite
.github/workflows/: ci.yml
docs/: DEMO.md  DEPLOY.md  JORDAN.md  NARRATION.md  PRESENTATION.md  YOUTUBE.md  kinetic-design-system.md  one-sheet.html  slides.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright-demo.config.ts  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: a11y-audit.spec.ts  app.spec.ts  auth.spec.ts  live-demo.spec.ts  onboarding.spec.ts
frontend/public/: llms.txt  robots.txt  site.webmanifest  sitemap.xml
frontend/public/.well-known/: security.txt
frontend/scripts/: generate-brand-assets.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: LandingPage.test.tsx  LandingPage.tsx  LoginScreen.test.tsx  LoginScreen.tsx  OnboardingModal.test.tsx  OnboardingModal.tsx
frontend/src/components/ChatPanel/: ChatPanel.test.tsx  index.tsx
frontend/src/components/Dashboard/: AgentDispatchLog.test.tsx  AgentDispatchLog.tsx  BehavioralProfilePanel.test.tsx  BehavioralProfilePanel.tsx  BioStatusCard.test.tsx  BioStatusCard.tsx  BurnoutTrendChart.test.tsx  BurnoutTrendChart.tsx  CardSkeleton.tsx  LogisticsStatusCard.test.tsx  LogisticsStatusCard.tsx  ROISummaryCard.test.tsx  ROISummaryCard.tsx  RelationalStatusCard.test.tsx  RelationalStatusCard.tsx  SleepSparkline.test.tsx  SleepSparkline.tsx  StatusBadge.test.tsx  StatusBadge.tsx  TriageList.test.tsx  TriageList.tsx  WeeklyDigestCard.test.tsx  WeeklyDigestCard.tsx
frontend/src/hooks/: useAuth.test.ts  useAuth.ts  useChat.test.ts  useChat.ts  useDigest.test.ts  useDigest.ts
frontend/src/types/: index.ts
frontend/src/utils/: agentLog.test.ts  agentLog.ts
scripts/: migrate.py  present.py  release.sh  run_scenarios.py  seed_demo.py
src/kinetic/: auth.py  logging_config.py  main.py
src/kinetic/agents/: __init__.py  base.py  bio_archivist.py  liaison_context.py  logistics_fixer.py  operational_liaison.py  relational_diplomat.py
src/kinetic/api/: __init__.py  auth.py  routes.py
src/kinetic/db/: base.py  ladybug_client.py  postgres_client.py  sqlite_client.py
src/kinetic/middleware/: logging.py
src/kinetic/models/: __init__.py  inputs.py  outputs.py
src/kinetic/orchestrator/: __init__.py  lead.py  triage.py
src/kinetic/parsing/: __init__.py  llm_parser.py
src/kinetic/services/: digest_generator.py  pattern_detector.py  simulate.py
tests/: conftest.py
tests/integration/: test_api.py  test_auth_routes.py  test_llm_parser_live.py  test_postgres_client.py  test_stream_route.py
tests/scenarios/: test_scenarios.py
tests/unit/: test_auth.py  test_bio_archivist.py  test_burnout_series.py  test_db_protocol.py  test_digest_generator.py  test_digest_route.py  test_lead_db.py  test_liaison_context.py  test_llm_parser.py  test_logging_config.py  test_logging_middleware.py  test_logistics_fixer.py  test_main.py  test_models.py  test_operational_liaison.py  test_orchestrator.py  test_pattern_detector.py  test_postgres_client_unit.py  test_relational_diplomat.py  test_simulate_route.py  test_sqlite_client.py  test_streaming.py
