[project]
name = "kinetic"
version = "1.10.0"
description = "Bio-Operational Triage Engine — personal infrastructure management for high-performance engineers"
authors = [{ name = "Karl Johnson", email = "hirekarl@proton.me" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "instructor>=1.7",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "google-genai>=1.73.1",
    "jsonref>=1.1.0",
    "aiosqlite>=0.22.1",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "asyncpg>=0.31.0",
    "sse-starlette>=1.8",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "commitizen>=3.29",
    "pre-commit>=3.7",
    "ruff>=0.9",
    "mypy>=1.14",
    "pydantic>=2.10",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "anyio[trio]>=4.6",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinetic"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",    # line-too-long — formatter handles this
    "S101",    # assert — allowed in tests (see per-file-ignores)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105", "S106"]
"src/kinetic/main.py" = ["ANN"]
# FastAPI dependency injection pattern: Depends(...) in default args is intentional
"src/kinetic/auth.py" = ["B008"]
"src/kinetic/api/*.py" = ["B008", "S105"]

[tool.ruff.lint.isort]
known-first-party = ["kinetic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "instructor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotenv"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sse_starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=kinetic",
    "--cov-report=term-missing",
    # --cov-fail-under=80 is not in default addopts intentionally:
    # enforce it only in QA review and CI to avoid blocking mid-cycle TDD work.
    # Run: uv run pytest --cov-fail-under=80 for a full gate check.
]
markers = [
    "unit: unit tests (fast, no I/O)",
    "integration: integration tests (may call external services)",
    "slow: tests that take >1s",
]

[tool.coverage.run]
source = ["kinetic"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]

# ── Commitizen ────────────────────────────────────────────────────────────────

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.10.0"
version_provider = "commitizen"
version_files = [
    "pyproject.toml:^version",
    "src/kinetic/__init__.py:__version__",
    "frontend/package.json:\"version\"",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
bump_message = "chore(release): v$current_version → v$new_version [skip ci]"
allowed_prefixes = ["assets", "Merge", "Revert", "Pull request", "fixup!", "squash!", "amend!"]
